# oiko

./: .dockerignore  Dockerfile  README.md  build.sh  pyproject.toml
oiko/: gunicorn.config.py
